--- a/style.css
+++ b/style.css
@@ -53,14 +53,17 @@ button {
   cursor: pointer;
   color: #000;
 }
-button:hover {
-  background-color: #ffa726;
-}
 .output {
   background: #2e3c50;
   margin-top: 30px;
   padding: 20px;
   border-radius: 12px;
+}
+.adPreview {
+  margin-top: 20px;
+  background-color: #283747;
+  padding: 20px;
+  border-radius: 10px;
 }
 footer {
   margin-top: 40px;
